# Visual-ML

./: .env.docker.example  .gitignore  CELERY_IMPLEMENTATION.md  CICD.md  DAG_REFACTOR_SUMMARY.md  DEPLOYMENT_GUIDE.md.resolved  DOCKER.md  DRY_AUDIT_REPORT.md  KNOWLEDGE_TRANSFER.md  NODE_METADATA_GUIDE.md  UPLOAD_DEBUG_GUIDE.md  aws_deployment_plan.md.resolved  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pendingTask.md  readme.md  setup.md
server/: .dockerignore  .env.example  .gitignore  .vercelignore  DEPENDENCY_OPTIMIZATION.md  Dockerfile  README.md  REFACTOR_COMPLETE.md  alembic.ini  main.py  pyproject.toml  test_cookies.py  test_s3.py  test_upload_flow.py  verify_email_config.py  visual_ml.db
server/alembic/versions/: 001_initial_auth_schema.py  002_genai_pipeline_schema.py  20260121_0946_update_schema.py  20260122_0945_add_fullname_to_students.py  20260122_1202_add_email_verification_fields.py  20260123_1500_add_datasets_table.py  20260124_performance_indexes.py  20260211_1757_add_project_sharing_fields.py  20260219_1422_add_xp_and_level_to_students.py
server/app/core/: celery_app.py  config.py  exceptions.py  logging.py  rate_limit.py  redis_cache.py  security.py
server/app/db/: base.py  seed.py  session.py
server/app/mentor/: __init__.py  node_explanations.py  router.py  schemas.py
server/app/ml/: engine.py  error_formatter.py  genai_engine.py  node_validators.py
server/app/models/: custom_app.py  dataset.py  gamification.py  genai.py  user.py
server/app/schemas/: auth.py  custom_app.py  gamification.py  genai.py  pipeline.py  project.py
server/app/services/: auth_service.py  badge_definitions.py  email_service.py  gamification_service.py  otp_service.py  pipeline_service.py  s3_service.py
server/app/tasks/: email_tasks.py  ml_tasks.py  pipeline_tasks.py
server/app/utils/: cleanup.py  ids.py
server/models/linear_regression/: model_linear_regression_20260204_095214_2f43748a_v20260204_095214.joblib  model_linear_regression_20260204_100101_c0db5599_v20260204_100101.joblib  model_linear_regression_20260204_102048_3e0d0598_v20260204_102048.joblib  model_linear_regression_20260204_102335_e525a580_v20260204_102335.joblib  model_linear_regression_20260204_102757_e975db42_v20260204_102757.joblib  model_linear_regression_20260204_103500_67e9870b_v20260204_103500.joblib  model_linear_regression_20260204_103950_694ebd1b_v20260204_103950.joblib  model_linear_regression_20260204_104047_cb466541_v20260204_104047.joblib  model_linear_regression_20260204_111732_78f4fab4_v20260204_111732.joblib  model_linear_regression_20260204_111755_b1d47586_v20260204_111755.joblib  model_linear_regression_20260204_111811_4cddab16_v20260204_111811.joblib  model_linear_regression_20260204_112023_e8d269b1_v20260204_112023.joblib  model_linear_regression_20260204_114137_1414c609_v20260204_114137.joblib  (+12 more)
server/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/uploads/: dataset_20260124_083850_d9c95837.csv
(+339 files in other folders)
